--- a/index.html
+++ b/index.html
@@ -11,32 +11,28 @@
 <body>
   <main>
     <div class="bento-grid">
-
       <div class="bento-grid__container bento-grid__social-media">
         <h2 class="bento-grid__title bento-grid__title--big bento-grid__title--white">Social Media <span>10x</span> <em>Faster</em> with AI</h2>
         <div class="bento-grid__social-media-star-content">
-          <img class="bento-grid__image" src="./assets/images/illustration-five-stars.webp" alt="five stars">
+          <img class="bento-grid__image" class="bento-grid__image" src="./assets/images/illustration-five-stars.webp" alt="five stars">
           <p class="bento-grid__paragraph">Over 4,000 5-star reviews</p>
         </div>
       </div>
-
       <div class="bento-grid__container bento-grid__multiple-platforms">
-        <img src="./assets/images/illustration-multiple-platforms.webp" alt="multiple plataforms">
+        <img class="bento-grid__image" src="./assets/images/illustration-multiple-platforms.webp" alt="multiple plataforms">
         <h3 class="bento-grid__title">Manage multiple accounts and platforms.</h3>
       </div>
-
       <div class="bento-grid__container bento-grid__consistent-schedule">
         <h3 class="bento-grid__title">Maintain a consistent posting schedule.</h3>
-        <img src="./assets/images/illustration-consistent-schedule.webp" alt="consistent schedule">
+        <img class="bento-grid__image" src="./assets/images/illustration-consistent-schedule.webp" alt="consistent schedule">
       </div>
-
       <div class="bento-grid__container bento-grid__schedule-posts">
         <h3 class="bento-grid__title">Schedule to social media.</h3>
-        <img src="./assets/images/illustration-schedule-posts.webp" alt="schedule posts">
+        <img class="bento-grid__image" src="./assets/images/illustration-schedule-posts.webp" alt="schedule posts">
         <p class="bento-grid__paragraph">Optimize post timings to publish content at the perfect time for your audience.</p>
       </div>
       <div class="bento-grid__container bento-grid__grow-followers">
-        <img src="./assets/images/illustration-grow-followers.webp" alt="grow followers">
+        <img class="bento-grid__image" src="./assets/images/illustration-grow-followers.webp" alt="grow followers">
         <h3 class="bento-grid__title bento-grid__title--middle bento-grid__title--white">Grow followers with non-stop content.</h3>
       </div>
       <div class="bento-grid__container bento-grid__audience-growth">
@@ -44,23 +40,23 @@
           <h3 class="bento-grid__title bento-grid__title--big">>56%</h3>
           <p class="bento-grid__paragraph">faster audience growth</p>
         </div>
-        <img src="./assets/images/illustration-audience-growth.webp" alt="audience growth">
+        <img class="bento-grid__image" src="./assets/images/illustration-audience-growth.webp" alt="audience growth">
       </div>
       <div class="bento-grid__container bento-grid__create-post">
         <h3 class="bento-grid__title bento-grid__title--middle">Create and schedule content <em>quicker.</em></h3>
-        <div class="bento-grid__create-post-img-container">
-          <img src="./assets/images/illustration-create-post.webp" alt="create post">
+        <div class="bento-grid__create-post-image-container">
+          <img class="bento-grid__image" src="./assets/images/illustration-create-post.webp" alt="create post">
         </div>
       </div>
       <div class="bento-grid__container bento-grid__ai-content">
         <h3 class="bento-grid__title bento-grid__title--middle">Write your content using AI.</h3>
-        <img src="./assets/images/illustration-ai-content.webp" alt="ai content">
+        <img class="bento-grid__image" src="./assets/images/illustration-ai-content.webp" alt="ai content">
       </div>
     </div>
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Adriverion</a>.
+    Coded by <a href="https://github.com/Adriverion">Adriverion</a>.
   </div>
 </body>
 </html>
